Bug 481244 - Drawing after pausing animation will edit the wrong frame and cause visual artifacts (git 3ad80aa)
Summary: Drawing after pausing animation will edit the wrong frame and cause visual ar...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 480530 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-11 21:30 UTC by Cade Martinez
Modified: 2024-02-26 17:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
System info dumped by Krita (7.52 KB, text/plain)
2024-02-11 21:30 UTC, Cade Martinez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cade Martinez 2024-02-11 21:30:27 UTC
Created attachment 165762 [details]
System info dumped by Krita

SUMMARY
When an animation is played at one frame and then paused at another, then any edits will affect the played frame.
Affects both Krita 5.2.2 and Krita 5.3.0-prealpha (git 3ad80aa).

STEPS TO REPRODUCE
1. Create a new project with a paint layer
2. Create two keyframes
3. Make distinct drawings on each frame (a big 'X' and 'O', for example)
4. Play the animation, starting at the first keyframe
5. Pause with the pause button, at any point at-or-after the second keyframe
6. (Without touching the timeline) Attempt to draw or otherwise edit the current frame

OBSERVED RESULT
While editing the current frame, parts of the first keyframe will appear to bleed through, and all edits will affect the first keyframe instead.

EXPECTED RESULT
The current frame is edited and without creating any visual artifacts.

SOFTWARE/OS VERSIONS
Windows: 10 (10.0.19044 Build 19044)
Qt Version: 5.15.7

ADDITIONAL INFORMATION
- This bug affects both Krita 5.2.2 and 5.3.0-prealpha (git 3ad80aa)
- Detailed system information attached
- A possible duplicate or related bug (it's unclear): https://bugs.kde.org/show_bug.cgi?id=480530
Comment 1 Dmitry Kazakov 2024-02-26 16:48:36 UTC
I can confirm the issue
Comment 2 Dmitry Kazakov 2024-02-26 16:58:40 UTC
Git commit 9b38692174bc46a54bc8ddc88b9cf866de762a6d by Dmitry Kazakov.
Committed on 26/02/2024 at 16:58.
Pushed by dkazakov into branch 'master'.

Fix artifacts when drawing on a paused animation

M  +1    -1    libs/ui/KisPlaybackEngineQT.cpp

https://invent.kde.org/graphics/krita/-/commit/9b38692174bc46a54bc8ddc88b9cf866de762a6d
Comment 3 Dmitry Kazakov 2024-02-26 16:59:02 UTC
Git commit ad35adbf834ef85f9742d95238164bd523fb03a3 by Dmitry Kazakov.
Committed on 26/02/2024 at 16:58.
Pushed by dkazakov into branch 'krita/5.2'.

Fix artifacts when drawing on a paused animation

M  +1    -1    libs/ui/KisPlaybackEngineQT.cpp

https://invent.kde.org/graphics/krita/-/commit/ad35adbf834ef85f9742d95238164bd523fb03a3
Comment 4 Dmitry Kazakov 2024-02-26 17:00:58 UTC
*** Bug 480530 has been marked as a duplicate of this bug. ***