Fix artifacts when drawing on a paused animation

BUG:481244